--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
 
 
@@ -33,7 +33,7 @@
         <item name="android:orientation">vertical</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:visibility">invisible</item>
+        <item name="android:visibility">gone</item>
     </style>
 
     <style name="input_credit_card">
@@ -49,6 +49,7 @@
     <style name="label_credit_card">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/field_label</item>
     </style>
 
 </resources>
